# mermelada

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  layout.html  main.cpp
.github/: cmake.yml
.github/workflows/: cmake.yml  linux.cmake.yml  macos.cmake.yml
experimental/: _linear_algebra.h
extras/: _debug_cpool.h  _ecs_sample.h  _interpolation_functions.ipynb  _libclang_cmake.txt  r_render_graph.h  windows_test.yml
extras/reflection/: reflection_cmake.txt
game/: component_list.h  config.h  controller_list.h  game.h  game_config.h  some_component.h  some_system.h  state_machines_list.h  system_list.cpp  system_list.h  vertex_list.h
reflection/: CMakeLists.txt  FindClang.cmake  reflection_plugin.cpp
res/data/: renderer_description
res/data/entities/: test_entity
res/data/scenes/: test_scene
res/render/: renderer_description
res/render/draw_color_i/: draw_color_i.vert  draw_color_i.vert.spv
res/render/draw_obj/: draw_obj.frag
res/render/draw_tex/: draw_tex.vert.spv
res/render/post/: post.frag.spv
res/render/test_window/: test_window.frag.spv  test_window.vert.spv
res/rendering/: render_graph
res/shaders/compute_test/: compute_test.comp  compute_test.comp.spv
res/shaders/draw_color_i/: draw_color_i.vert  draw_color_i.vert.spv
res/shaders/draw_depth/: draw_depth.frag  draw_depth.frag.spv
res/shaders/draw_light/: draw_light.frag  draw_light.frag.spv  draw_light.vert  draw_light.vert.spv
res/shaders/draw_obj/: draw_obj.frag  draw_obj.frag.spv  draw_obj.vert  draw_obj.vert.spv
res/shaders/draw_tex/: draw_tex.frag  draw_tex.frag.spv
res/shaders/post/: post.frag  post.frag.spv
res/shaders/shadowmap/: shadowmap.frag  shadowmap.vert  shadowmpa.vert.spv
res/shaders/test/: test.frag  test.frag.spv  test.vert  test.vert.spv
res/shaders/test_subpass/: test_subpass.frag  test_subpass.frag.spv
res/shaders/test_tex/: test_tex.vert
res/shaders/test_window/: test_window.frag  test_window.vert
res/shaders/window/: window.frag  window.vert
res/shaders/window_depth/: window_depth.frag  window_depth.frag.spv  window_depth.vert.spv
res/shaders/window_depth_msaa/: window_depth_msaa.frag  window_depth_msaa.frag.spv  window_depth_msaa.vert
